# MMRAG

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
PicRetrieve/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
PicRetrieve/app/: __init__.py  api.py  cli.py  config.py  embedder.py  index_store.py  mcp_server.py  metadata.py  retrieval.py
PicRetrieve/docs/: image_retrieval_data_bootstrap_codex.md  image_retrieval_mvp_codex.md  picretrieve_api.md  picretrieve_image_architecture.drawio
PicRetrieve/scripts/: bootstrap_data.py  evaluate_flickr30k.py  evaluate_image_benchmark.py  evaluate_mteb_image_retrieval.py  evaluate_recall.py  evaluate_smoke.py  save_hf_images.py
PicRetrieve/tests/: test_embedder_device.py  test_index_store.py  test_metadata.py  test_retrieval.py
architecture/likec4/: likec4.config.json  mmrag.c4
data/text_corpus/: codex_drawio_revision_guidelines.md  多模态RAG实验选型与进度跟踪.md  易博建议-2026-530-1.md
docs/: README.md  api.md  architecture.md  codex_drawio_architecture_guidelines.md  configuration.md  data.md  development.md  getting-started.md  likec4_architecture.md  mrag_experiment_dashboard.html  mrag_experiment_registry.json  multimodal_rag_architecture_c4.drawio  multimodal_rag_architecture_model.json  multimodal_rag_data_processing_architecture.drawio  multimodal_rag_functional_architecture.drawio  multimodal_rag_implementation_architecture.drawio  multimodal_rag_research_roadmap_v2.html  multimodal_rag_retrieval_branch_experiments.drawio  多模态RAG实验选型与进度跟踪.md  多模态检索问答系统技术设计方案.md
docs/decisions/: 0001-picretrieve-first-agent.md
docs/langgraph/: picretrieve_graph.mmd
docs/likec4/: model.json
mrag/: __init__.py  cli.py  graph.py  state.py  web.py
mrag/models/: __init__.py  evidence.py  retrieval.py
mrag/nodes/: answer_generator.py  evidence_verifier.py  modality_router.py  picretrieve_answer.py  picretrieve_planner.py  picretrieve_verifier.py  query_planner.py  reflection.py  reranker.py  retrievers.py
mrag/retrievers/: __init__.py  base.py  image_retriever.py  text_retriever.py
mrag/utils/: __init__.py  json_utils.py  llm.py
scripts/: export_langgraph_diagram.py
tests/: test_picretrieve_graph.py
