[project]
name = "mrag"
version = "0.1.0"
description = "Multi-modal RAG system with LangGraph orchestration and PicRetrieve."
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.4",
  "langchain-core>=0.3",
  "fastapi>=0.115",
  "pydantic>=2",
  "pydantic-settings>=2",
  "openai>=1.0",
  "numpy>=1.26",
  "pillow>=10",
  "picretrieve",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
mrag = "mrag.cli:main"

[project.optional-dependencies]
picretrieve = []
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]


[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mrag"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "ARG"]
ignore = ["B904", "SIM115", "ARG001", "ARG002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"mrag/web.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
picretrieve = { path = "PicRetrieve", editable = true }
