[project]
name = "picretrieve"
version = "0.1.0"
description = "Local CLIP image retrieval MVP with metadata fusion."
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2",
  "pydantic-settings>=2",
  "pillow>=10",
  "numpy>=1.26",
  "tqdm>=4.66",
  "torch>=2.3",
  "transformers>=4.45",
  "mcp[cli]>=1.0",
]

[project.optional-dependencies]
data = [
  "requests>=2.32",
  "huggingface-hub>=0.25",
  "datasets>=3.0",
]
ocr = [
  "pytesseract>=0.3.10",
  "rapidocr-onnxruntime>=1.4",
]
receipts = [
  "fiftyone>=1.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
picretrieve = "app.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "ARG"]
ignore = ["B904", "SIM115", "ARG001", "ARG002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"app/api.py" = ["E501", "B008"]
"scripts/demo_pipeline.py" = ["E402", "I001"]
"scripts/*" = ["INP001", "E501"]
"tests/*" = ["INP001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
